--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <a href="https://waas.network/register/?r=prestes&position=Right" class="btn">⭐ CADASTRE-SE AQUI 2</a>
         <a href="https://waas.network/register/?r=prestessouza&position=Left" class="btn">⭐ CADASTRE-SE AQUI 3</a>
         <a href="https://waas.network/register/?r=prestessouza&position=Right" class="btn">⭐ CADASTRE-SE AQUI 4</a>
-        <a href="http://boomerangtrade.webcindario.com/instrucoes/1" class="btn">⭐ INSTRUÇÕES</a>
+        <a href="https://prestess.github.io/boomerang-trade/1" class="btn">⭐ INSTRUÇÕES</a>
         <a href="https://t.me/+rBwRNMt-CW8yOGVh" class="btn">⭐ CANAL TELEGRAM BOOMERANG TRADE</a>
 
         <div class="plan">
