--- a/2.html
+++ b/2.html
@@ -98,8 +98,8 @@
             </p>
         </div>
 
-        <a href="https://boomerangtrade.webcindario.com" class="btn">⭐ PAGINA INICIAL</a>
-        <a href="https://boomerangtrade.webcindario.com/instrucoes/3" class="btn">⭐ Abrir Metamask no Celular</a>
+        <a href="https://prestess.github.io/boomerang-trade" class="btn">⭐ PAGINA INICIAL</a>
+        <a href="https://prestess.github.io/boomerang-trade/3" class="btn">⭐ Abrir Metamask no Celular</a>
 
         <div class="plan">
             <h2>Alguns Passos Importante Para Fazer enquanto aguarda a liberação das Arbitragens.</h2>
