--- a/8.html
+++ b/8.html
@@ -98,8 +98,8 @@
             </p>
         </div>
 
-        <a href="https://boomerangtrade.webcindario.com/" class="btn">⭐ PAGINA INICIAL</a>
-        <a href="https://boomerangtrade.webcindario.com/instrucoes/9" class="btn">⭐ Emprestimo Apenas para Comprometidos </a>
+        <a href="https://prestess.github.io/boomerang-trade" class="btn">⭐ PAGINA INICIAL</a>
+        <a href="https://prestess.github.io/boomerang-trade/9" class="btn">⭐ Emprestimo Apenas para Comprometidos </a>
 
         <div class="plan">
             <h2>Alguns Passos Importante Para Fazer enquanto aguarda a liberação das Arbitragens.</h2>
