--- a/9.html
+++ b/9.html
@@ -98,8 +98,8 @@
             </p>
         </div>
 
-        <a href="https://boomerangtrade.webcindario.com" class="btn">⭐ PAGINA INICIAL</a>
-        <a href="https://boomerangtrade.webcindario.com/instrucoes/10" class="btn">⭐ Ganhe Mais Fazendo o Tripé</a>
+        <a href="https://prestess.github.io/boomerang-trade" class="btn">⭐ PAGINA INICIAL</a>
+        <a href="https://prestess.github.io/boomerang-trade/10" class="btn">⭐ Ganhe Mais Fazendo o Tripé</a>
 
         <div class="plan">
             <h2>Alguns Passos Importante Para Fazer enquanto aguarda a liberação das Arbitragens.</h2>
