--- a/10.html
+++ b/10.html
@@ -98,8 +98,8 @@
             </p>
         </div>
 
-        <a href="https://boomerangtrade.webcindario.com" class="btn">⭐ PAGINA INICIAL</a>
-        <a href="https://boomerangtrade.webcindario.com/instrucoes/11" class="btn">⭐ Como Sincronizar com a Metamask</a>
+        <a href="https://prestess.github.io/boomerang-trade" class="btn">⭐ PAGINA INICIAL</a>
+        <a href="https://prestess.github.io/boomerang-trade/11" class="btn">⭐ Como Sincronizar com a Metamask</a>
 
         <div class="plan">
             <h2>Alguns Passos Importante Para Fazer enquanto aguarda a liberação das Arbitragens.</h2>
