--- a/12.html
+++ b/12.html
@@ -98,8 +98,8 @@
             </p>
         </div>
 
-        <a href="https://boomerangtrade.webcindario.com" class="btn">⭐ PAGINA INICIAL</a>
-        <a href="https://boomerangtrade.webcindario.com/instrucoes/13" class="btn">⭐ Apreseentação de Negócio - Ganhe 1% por minuto fazendo Arbitragem</a>
+        <a href="https://prestess.github.io/boomerang-trade" class="btn">⭐ PAGINA INICIAL</a>
+        <a href="https://prestess.github.io/boomerang-trade/13" class="btn">⭐ Apreseentação de Negócio - Ganhe 1% por minuto fazendo Arbitragem</a>
 
         <div class="plan">
             <h2>Alguns Passos Importante Para Fazer enquanto aguarda a liberação das Arbitragens.</h2>
